<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">百芬扩香仪</string>
	<string name="tab1">设备</string>
	<string name="tab2">场景</string>
	<string name="tab3">设置</string>
	<string name="tab4">服务</string>
	<string name="btn_confirm">确定</string>
	<string name="btn_login">登录</string>
	<string name="btn_logout">退出</string>
	<string name="forget_password">忘记密码</string>
	<string name="sign_up">新用户注册</string>
	<string name="button_sign">注册</string>
	<string name="bonfeel_company">上海百芬环境科技有限公司</string>
	<string name="user_name">用户名</string>
	<string name="e_mail">邮箱地址</string>
	<string name="user_code">密码</string>
	<string name="commit_addr">通讯地址</string>
	<string name="user_mail">电子邮箱</string>
	<string name="modify_password">密码修改</string>
	<string name="code_confirm">确认密码</string>
	<string name="user_hint">请以手机号为用户名</string>
	<string name="hint_email">正确的邮箱能帮您找回密码</string>
	<string name="code_hint">建议6~10位数字和字母的组合</string>
	<string name="code_confirm_hint">密码确认</string>
	<string name="how_to_findkey">请输入注册过的手机号，我们会发送链接到您注册时填写的邮箱，点击该链接就可以修改密码!</string>
	<string name="input_phone">请输入您注册的手机号</string>
	<string name="send_check">发送邮件到邮箱</string>
	<string name="check_code_tips">已发送验证码到您的手机：12345678912</string>
	<string name="device_name">扩香仪A30</string>
	<string name="infos">您还没有设备，请先添加设备</string>
	<string name="quicklink">添加设备</string>
	<string name="set_device_name">设备名称</string>
	<string name="beep">蜂鸣器</string>
	<string name="set_beep">开</string>
	<string name="time">时间校准</string>
	<string name="set_time"></string>
	<string name="time_scale">时间段</string>
	<string name="device_temp">周围温度</string>
	<string name="device_weat">周围湿度</string>
	<string name="device_nig">负离子</string>
	<string name="set_time_scale"></string>
	<string name="set_name_title">修改名称</string>
	<string name="cancle">取消</string>
	<string name="ok">确定</string>
	<string name="setting">设置</string>
	<string name="full_time">全时间段(24小时)</string>
	<string name="sector_time">时间段</string>
	<string name="sector1">时间段1</string>
	<string name="sector2">时间段2</string>
	<string name="sector3">时间段3</string>
	<string name="set_start_and_stop">时间设置</string>
	<string name="air_speed">风速</string>
	<string name="work_time">运行时长</string>
	<string name="rest_time">暂停时长</string>
	<string name="easy_control">一键控制</string>
	<string name="power_on">开机</string>
	<string name="power_off">关机</string>
	<string name="scene_list">场景列表</string>
	<string name="my_counter">个人中心</string>
	<string name="message_push">信息推送</string>
	<string name="shop">百芬商城</string>
	<string name="usual_problem">常见问题</string>
	<string name="suggest">意见反馈</string>
	<string name="about_us">关于软件</string>
	<string name="rememberPwd">记住密码</string>
	<string name="autoLogin">自动登录</string>
	<string name="scene_name">客厅</string>
	<string name="device_location">设备位置</string>
	<string name="location_sample">浙江省杭州市余杭区五常街道五常大道158号浙江达峰科技研发中心四楼1号会议室</string>
	<string name="save">保  存</string>
	<string name="province">浙江省杭州市余杭区</string>
	<string name="street">五常街道</string>
	<string name="street_hint">请填写街道地址</string>
	<string name="detail_hint">请填写详细地址</string>
	<string name="add_timescale">新增</string>
	<string name="set_circle">定时周期</string>
	<string name="sunday">日</string>
	<string name="monday">一</string>
	<string name="tuesday">二</string>
	<string name="wednesday">三</string>
	<string name="thursday">四</string>
	<string name="friday">五</string>
	<string name="saturday">六</string>
	<string name="device_time">设备时间:</string>
	<string name="stand_time">标准时间:</string>
	<string name="btn_correct_time">同步时间</string>
	<string name="device_mac">请填写设备MAC</string>
	<string name="soft_version">V1.0.0</string>
	<string name="soft_name">百芬扩香仪</string>
	<string name="group_name">浙江达峰</string>
	<string name="welcome_page">欢迎页</string>
	<string name="func">功能介绍</string>
	<string name="check_version">检查新版本</string>
	<string name="exit_system">退出软件</string>
	<string name="develope_group">开发团队</string>
	<string name="send">发送</string>
	<string name="send_hint">请输入内容</string>
	<string name="ssid">无线网络：</string>
	<string name="key">无线密码：</string>
	<string name="easylink">配置</string>
	<string name="ssid_hint">WIFI名称</string>
	<string name="key_hint">请输入WIFI密码</string>
	<string name="mac">设备MAC：</string>
	<string name="mac_hint">请输入设备MAC</string>
	<string name="config_help">为什么配置不成功？</string>
	<string name="manual_tip">配置不成功?可试试手动输入设备MAC</string>
	<string name="manual_input">手动输入MAC</string>
	<string name="new_username">请输入新的用户名</string>
	<string name="new_mail">请输入新的邮箱地址</string>
	<string name="new_commit_addr">请输入新的通讯地址</string>
	<string name="old_key">旧密码</string>
	<string name="new_key">新密码</string>
	<string name="tip_error">为方便您继续使用，请及时检查设备或联系售后服务人员，以免造成损失</string>
	<string name="title_activity_new_func">NewFuncActivity</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_scene_config">SceneConfigActivity</string>
	<string name="title_activity_develope_group">DevelopeGroupActivity</string>
	<string name="title_activity_set_scene_name">SetSceneNameActivity</string>
	<string name="title_activity_capture">CaptureActivity</string>
	<string name="title_activity_scan_result">ScanResultActivity</string>

</resources>
