<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.example.bonfeel.perfumediffuser_beifen_chineseappanv311.activity.FirstConfigActivity" >

	<com.example.bonfeel.perfumediffuser_beifen_chineseappanv311.custom.TitleBar
		android:id="@+id/titleBar_easylink"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true" >
	</com.example.bonfeel.perfumediffuser_beifen_chineseappanv311.custom.TitleBar>
	<LinearLayout
		android:id="@+id/layout_netinfo"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/titleBar_easylink"
		android:layout_centerHorizontal="true"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="40dp"
		android:orientation="vertical" >

		<LinearLayout
			android:id="@+id/layout_ssid"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

			<TextView
				android:id="@+id/tv_ssid_tag"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_weight="1"
				android:gravity="right"
				android:text="@string/ssid"
				android:textSize="18sp"
				android:typeface="monospace" />

			<TextView
				android:id="@+id/tv_ssid"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2"
				android:hint="@string/ssid_hint"
				android:singleLine="true"
				android:text=""
				android:textSize="20sp"
				android:typeface="monospace" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

			<TextView
				android:id="@+id/tv_key_tag"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_weight="1"
				android:gravity="right"
				android:text="@string/key"
				android:textSize="18sp"
				android:typeface="monospace" />

			<EditText
				android:id="@+id/et_key"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2"
				android:background="@drawable/suggest_input"
				android:ems="10"
				android:hint="@string/key_hint"
				android:singleLine="true"
				android:textSize="20sp"
				android:typeface="monospace" >

				<requestFocus />
			</EditText>
		</LinearLayout>
	</LinearLayout>

	<TextView
		android:id="@+id/tv_config_help"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="40dp"
		android:text="@string/config_help"
		android:textColor="#0066ff" />

	<TextView
		android:id="@+id/manual_tip"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/layout_netinfo"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="12dp"
		android:text="@string/manual_tip"
		android:textColor="#0088ff" />
	
	<LinearLayout
		android:id="@+id/layout_switch_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/manual_tip"
		android:layout_centerHorizontal="true"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="16dp"
		android:orientation="horizontal" >

		<TextView
			android:id="@+id/textView1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1" />

		<com.example.bonfeel.perfumediffuser_beifen_chineseappanv311.custom.SwitchButton
			android:id="@+id/sb_switch_model"
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:layout_weight="1"
	        android:layout_gravity="center">
		</com.example.bonfeel.perfumediffuser_beifen_chineseappanv311.custom.SwitchButton>

		<TextView
			android:id="@+id/textView2"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>
		
	</LinearLayout>
	

	<LinearLayout
		android:id="@+id/layout_device_mac"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/layout_switch_button"
		android:layout_centerHorizontal="true"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="20dp"
		android:orientation="horizontal"
		android:visibility="gone" >

		<TextView
			android:id="@+id/tv_mac_tag"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:gravity="right"
			android:text="@string/mac"
			android:textSize="18sp"
			android:typeface="monospace" />

		<EditText
			android:id="@+id/et_mac"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:background="@drawable/suggest_input"
			android:ems="10"
			android:hint="@string/mac_hint"
			android:singleLine="true"
			android:textSize="20sp"
			android:typeface="monospace" >

			<requestFocus />
		</EditText>
	</LinearLayout>
	
	<Button
		android:id="@+id/btn_easylink"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/layout_device_mac"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="20dp"
		android:background="@drawable/background_button_style5"
		android:text="@string/easylink"
		android:textColor="#ffffff"
		android:textSize="20sp" />
	
</RelativeLayout>