<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#eeeeee" >

    <LinearLayout
    	android:id="@+id/layout_setting"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_margin="15dp"
    	android:orientation="vertical" >

        <LinearLayout
        	android:id="@+id/layout_name"
        	android:layout_width="match_parent"
        	android:layout_height="50dp"
        	android:orientation="horizontal" >

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/tv_name"
            	android:layout_weight="2"
            	android:text="@string/set_device_name" />

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/textView2" />

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/tv_set_device_name"
            	android:gravity="right"
            	android:typeface="monospace"
            	android:layout_weight="2"
            	android:text="@string/device_name" />

        </LinearLayout>

        <TextView
        	android:id="@+id/divider1"
        	android:layout_width="match_parent"
        	android:layout_height="1dp"
        	android:background="#dddddd" />

        <LinearLayout
        	android:id="@+id/layout_beep"
        	android:layout_width="match_parent"
        	android:layout_height="50dp" 
        	android:orientation="horizontal"
        	android:visibility="gone">

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/tv_beep"
            	android:text="@string/beep" />

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/textView3" />

            <Button
            	style="@style/SetStyle"
            	android:id="@+id/btn_set_beep"
            	android:typeface="monospace"
            	android:text="@string/set_beep"
            	android:background="@drawable/background_button"/>

        </LinearLayout>

        <TextView
        	android:id="@+id/divider2"
        	android:layout_width="match_parent"
        	android:layout_height="1dp"
        	android:background="#dddddd"
        	android:visibility="gone" />

        <LinearLayout
        	android:id="@+id/layout_time"
        	android:layout_width="match_parent"
        	android:layout_height="50dp"
        	android:orientation="horizontal" >

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/tv_time"
            	android:text="@string/time" />

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/textView4"/>

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/tv_set_time"
            	android:gravity="right"
            	android:text="@string/set_time" />

            <ImageView
            	android:id="@+id/iv_set_time"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="0.5"
            	android:layout_gravity="center"
            	android:src="@drawable/arrow" />

        </LinearLayout>

        <TextView
        	android:id="@+id/divider3"
        	android:layout_width="match_parent"
        	android:layout_height="1dp"
        	android:background="#dddddd" />

        <LinearLayout
        	android:id="@+id/layout_timescale"
        	android:layout_width="match_parent"
        	android:layout_height="50dp"
        	android:orientation="horizontal" >

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/tv_timescale"
            	android:text="@string/time_scale" />

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/textView5"/>

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/tv_set_timescale"
            	android:gravity="right"
            	android:text="@string/set_time_scale" />

            <ImageView
            	android:id="@+id/iv_set_timescale"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="0.5"
            	android:layout_gravity="center"
            	android:src="@drawable/arrow" />

        </LinearLayout>

        <TextView
        	android:id="@+id/divider4"
        	android:layout_width="match_parent"
        	android:layout_height="1dp"
        	android:background="#dddddd" />
        
        <LinearLayout
        	android:id="@+id/layout_temprature"
        	android:layout_width="match_parent"
        	android:layout_height="50dp"
        	android:orientation="horizontal" >

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/tv_temprature"
            	android:text="@string/device_temp" />

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/textView6"/>

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/tv_check_temp"
            	android:gravity="right"
            	android:text="@string/set_time_scale" />

            <ImageView
            	android:id="@+id/iv_check_temp"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="0.5"
            	android:layout_gravity="center"
            	android:src="@drawable/arrow" />

        </LinearLayout>

        <TextView
        	android:id="@+id/divider5"
        	android:layout_width="match_parent"
        	android:layout_height="1dp"
        	android:background="#dddddd" />
        
         <LinearLayout
        	android:id="@+id/layout_weat"
        	android:layout_width="match_parent"
        	android:layout_height="50dp"
        	android:orientation="horizontal" >

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/tv_weat"
            	android:text="@string/device_weat" />

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/textView7"/>

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/tv_check_weat"
            	android:gravity="right"
            	android:text="@string/set_time_scale" />

            <ImageView
            	android:id="@+id/iv_check_weat"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="0.5"
            	android:layout_gravity="center"
            	android:src="@drawable/arrow" />

        </LinearLayout>

        <TextView
        	android:id="@+id/divider6"
        	android:layout_width="match_parent"
        	android:layout_height="1dp"
        	android:background="#dddddd" />
        
        <LinearLayout
        	android:id="@+id/layout_nig"
        	android:layout_width="match_parent"
        	android:layout_height="50dp"
        	android:orientation="horizontal"
        	android:visibility="gone" >

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/tv_nig"
            	android:text="@string/device_nig" />

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/textView8"/>

            <TextView
            	style="@style/SetStyle"
            	android:id="@+id/tv_control_nig"
            	android:gravity="right"
            	android:text="@string/set_time_scale" />

            <ImageView
            	android:id="@+id/iv_control_nig"
            	android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="0.5"
            	android:layout_gravity="center"
            	android:src="@drawable/arrow" />

        </LinearLayout>

        <TextView
        	android:id="@+id/divider7"
        	android:layout_width="match_parent"
        	android:layout_height="1dp"
        	android:background="#dddddd"
        	android:visibility="gone" />

    </LinearLayout>

    <TextView
    	android:id="@+id/tv_infos_nodevice"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_centerHorizontal="true"
    	android:layout_centerVertical="true"
    	android:text="@string/infos"
    	android:visibility="gone" />
	<!-- 风速测试 -->
    <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/layout_setting"
        android:layout_below="@+id/layout_setting"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="风速测试"
            android:textSize="30sp"
            />
        <EditText
            android:id="@+id/et_inputWind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="请输入0-10之间的数字！分別对应高低风速！" />
        <Button
            android:id="@+id/btn_wind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:text="确定"
            />
    </LinearLayout> -->
	
</RelativeLayout>
